...
    <string name="gas">ガス</string>
    <string name="house_rent">家賃・その他</string>
    <string name="tap">水道</string>
    <string name="unit">¥</string>
    <string name="unit_format">¥%,d</string>
    <string name="category">カテゴリー</string>
    <string name="start">はじめる</string>
    <string name="name">お名前</string>
    <string name="certification">認証</string>
    <string name="asterisk">*</string>
    <string name="upload">アップロード</string>
    <string name="year">年</string>
    <string name="month">月</string>
...
